--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='images/app-logo.png') }}">
-    <title>Movies And Series</title>
+    <title>Family Tree - Haché & Leduc</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
     <script src="https://kit.fontawesome.com/feeefe9188.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.typekit.net/xyo4hwt.css">
