--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,8 @@
         font-family: "carbon", sans-serif;
         font-weight: 100;
         font-style: normal;
+        display: flex;
+        line-height: 35px;
     }
     
     .navbar {
