--- a/templates/index.html
+++ b/templates/index.html
@@ -11,8 +11,8 @@
 </head>
 <style>
     body {
-        font-family: "carbon", sans-serif;
-        font-weight: 100;
+        font-family: "filmotype-ace", sans-serif;
+        font-weight: 700;
         font-style: normal;
         display: flex;
         line-height: 35px;
