--- a/templates/index.html
+++ b/templates/index.html
@@ -11,11 +11,13 @@
 </head>
 <style>
     body {
-        font-family: "filmotype-ace", sans-serif;
-        font-weight: 700;
-        font-style: normal;
-        display: flex;
-        line-height: 35px;
+      font-family: "filmotype-ace", sans-serif;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 28px;
+      line-height: 35px;
+      display: flex;
+      align-items: center;
     }
     
     .navbar {
