Update index.html and main.css

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,52 +9,14 @@
     <script src="https://kit.fontawesome.com/feeefe9188.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.typekit.net/xyo4hwt.css">
 </head>
-<style>
-    body {
-      font-family: "filmotype-ace", sans-serif;
-      font-style: normal;
-      font-weight: 400;
-      font-size: 28px;
-      line-height: 35px;
-      display: flex;
-      align-items: center;
-    }
-    
-    .navbar {
-      width: 100%;
-      background-color: #21852b;
-      overflow: auto;
-    }
-    
-    .navbar a {
-      float: left;
-      padding: 12px;
-      color: rgb(255, 255, 255);
-      text-decoration: none;
-      font-size: 2px;
-    }
-    
-    .navbar a:hover {
-      background-color: #0d4408;
-    }
-    
-    .active {
-      background-color: #156126;
-    }
-    
-    @media screen and (max-width: 500px) {
-      .navbar a {
-        float: none;
-        display: block;
-      }
-    }
-    </style>
 <body>
-    <div class="navbar">
-        <a class="active" href="#"><i class="fa fa-fw fa-home"></i> Home</a>
-        <a href="#"><i class="fa-solid fa-magnifying-glass"></i> Search</a>
-        <a href="#"><i class="fa-solid fa-phone"></i> Contact</a>
-        <a href="#"><i class="fa-solid fa-user"></i> Login</a>
-      </div>
+  <nav>
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Services</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </nav>
 </body>
 </html>
