--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
     <script src="https://kit.fontawesome.com/feeefe9188.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.typekit.net/xyo4hwt.css">
+    <script src="{{ url_for('static', filename='js/script.js') }}" crossorigin="anonymous"></script>
 </head>
 <body>
   <header>
