--- a/templates/index.html
+++ b/templates/index.html
@@ -40,14 +40,14 @@
     <section id="contact">
       <h2>Contactez-moi</h2>
       <p>Vous pouvez me contactez si vous avez plus d'informations sur la famille des Haché ou des Leduc!</p>
-      <form>
+      <form action="mailto:tristanhache2009@gmail.com" method="post" enctype="text/plain">
         <label for="name">Nom</label>
         <input type="text" id="name" name="name" required>
         <label for="email">E-mail</label>
         <input type="email" id="email" name="email" required>
         <label for="message">Message</label>
         <textarea id="message" name="message" rows="5" required></textarea>
-        <input onclick="sendMail();" type="submit" value="Envoyer">
+        <input type="submit" value="Envoyer">
       </form>
     </section>
   </main>
