--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
     <section id="contact">
       <h2>Contactez-moi</h2>
       <p>Vous pouvez me contactez si vous avez plus d'informations sur la famille des Haché ou des Leduc!</p>
-      <form action="mailto:tristanhache2009@gmail.com" method="post" enctype="text/plain">
+      <form  method="post" action="send-email.php">
         <label for="name">Nom</label>
         <input type="text" id="name" name="name" required>
         <label for="email">E-mail</label>
