--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
     <section id="contact">
       <h2>Contactez-moi</h2>
       <p>Vous pouvez me contactez si vous avez plus d'informations sur la famille des Haché ou des Leduc!</p>
-      <form action="{{ url_for('static', filename='js/script.js') }}">
+      <form>
         <label for="name">Nom</label>
         <input type="text" id="name" name="name" required>
 
@@ -49,7 +49,7 @@
 
         <label for="message">Message</label>
         <textarea id="message" name="message" rows="5" required></textarea>
-        
+
         <input type="submit" value="Envoyer">
       </form>
     </section>
