--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
     </section>
     <section id="contact">
       <h2>Contactez-moi</h2>
-      <button href="password.html">password</button>
+      <button href="{{ url_for('templates', filename='password.html') }}">password</button>
       <p>Vous pouvez me contactez si vous avez plus d'informations sur la famille des Haché ou des Leduc!</p>
       <form>
         <label for="name">Nom</label>
