--- a/templates/index.html
+++ b/templates/index.html
@@ -29,12 +29,12 @@
     <section id="gallery">
       <h2>Galerie Photo!</h2>
       <div class="photo-gallery">
-        <img src="{{ url_for('static', filename='images/#') }}" alt="Photo de famille 1">
-        <img src="{{ url_for('static', filename='images/#') }}" alt="Photo de famille 2">
-        <img src="{{ url_for('static', filename='images/#') }}" alt="Photo de famille 3">
-        <img src="{{ url_for('static', filename='images/#') }}" alt="Photo de famille 4">
-        <img src="{{ url_for('static', filename='images/#') }}" alt="Photo de famille 5">
-        <img src="{{ url_for('static', filename='images/#') }}" alt="Photo de famille 6">
+        <img src="https://images.unsplash.com/photo-1601979142879-ad5896cb0617?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8ZmFtaWx5JTIwdHJlZXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60" alt="Photo de famille 1">
+        <img src="https://images.unsplash.com/photo-1441974231531-c6227db76b6e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTB8fG5hdHVyZXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60" alt="Photo de famille 2">
+        <img src="https://images.unsplash.com/photo-1535025075092-5a1cf795130b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTJ8fGZvcmVzdCUyMGJhY2tncm91bmR8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" alt="Photo de famille 3">
+        <img src="https://images.unsplash.com/photo-1476362555312-ab9e108a0b7e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjR8fGZvcmVzdCUyMGJhY2tncm91bmR8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" alt="Photo de famille 4">
+        <img src="https://images.unsplash.com/photo-1590664216212-62e763768cae?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NDR8fGZvcmVzdCUyMGJhY2tncm91bmR8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" alt="Photo de famille 5">
+        <img src="https://images.unsplash.com/photo-1470115636492-6d2b56f9146d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Njh8fGZvcmVzdCUyMGJhY2tncm91bmR8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" alt="Photo de famille 6">
       </div>
     </section>
     <section id="contact">
