--- a/static/css/main.css
+++ b/static/css/main.css
@@ -37,6 +37,8 @@ img {
 /* Navigation Styles */
 nav {
   background-color: #333;
+  padding-top: 20px;
+  padding-bottom: 20px;
   }
   
   nav ul {
