--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2,8 +2,7 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-  overflow: scroll;
-  overflow-y: hidden;
+  scrollbar-color: #2b2b2b;
 }
 
 /* Basic Styles */
