--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2,7 +2,29 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-  scrollbar-color: #2b2b2b;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+  border-radius: 20px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+  border-radius: 20px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888; 
+  border-radius: 20px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
 }
 
 /* Basic Styles */
