--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6,25 +6,24 @@
 
 /* width */
 ::-webkit-scrollbar {
-  width: 10px;
-  border-radius: 20px;
+  width: 15px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f1f1f1; 
-  border-radius: 20px;
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
 }
  
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #888; 
-  border-radius: 20px;
+  background: #2d2d2d; 
+  border-radius: 10px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #555; 
+  background: #1a1a1a; 
 }
 
 /* Basic Styles */
