--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,16 @@
     <section id="welcome">
       <h2>Bienvenue sur l'arbre Généalogique de Haché et Leduc!</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ut velit quis velit vestibulum placerat ut vitae quam. Pellentesque in augue at lorem ultricies ullamcorper eu vitae enim.</p>
+      <button href="#popup1">Tristan</button>
+      <div id="popup1" class="overlay">
+        <div class="popup">
+          <h2>Here i am</h2>
+          <a class="close" href="#">&times;</a>
+          <div class="content">
+            Thank to pop me out of that button, but now i'm done so you can close this window.
+          </div>
+        </div>
+      </div>
     </section>
     <section id="gallery">
       <h2>Galerie Photo!</h2>
