--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
     <section id="welcome">
       <h2>Bienvenue sur l'arbre Généalogique de Haché et Leduc!</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ut velit quis velit vestibulum placerat ut vitae quam. Pellentesque in augue at lorem ultricies ullamcorper eu vitae enim.</p>
-      <button href="#popup1">Tristan</button>
+      <a class="button" href="#popup1">Let me Pop up</a>
       <div id="popup1" class="overlay">
         <div class="popup">
           <h2>Here i am</h2>
