--- a/static/css/main.css
+++ b/static/css/main.css
@@ -26,6 +26,25 @@
   background: #1a1a1a; 
 }
 
+
+
+
+
+
+.button {
+  font-size: 1em;
+  padding: 10px;
+  color: #fff;
+  border: 2px solid black;
+  background-color: #06D85F;
+  border-radius: 20px/50px;
+  text-decoration: none;
+  cursor: pointer;
+  transition: all 0.3s ease-out;
+}
+.button:hover {
+  background: #06D85F;
+}
 .overlay {
   position: fixed;
   top: 0;
