--- a/static/css/main.css
+++ b/static/css/main.css
@@ -32,11 +32,13 @@
 
 
 .button {
+  height: 652px;
+  width: 369px;
   font-size: 1em;
   padding: 10px;
   color: #fff;
-  border: 2px solid black;
-  background-color: #06D85F;
+  border: 2px solid #353535;
+  background-color: #181818;
   border-radius: 20px/50px;
   text-decoration: none;
   cursor: pointer;
