--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
       <div id="popup1" class="overlay">
         <div class="popup">
           <h2>Here i am</h2>
-          <a class="close" href="#">&times;</a>
+          <a class="close" href="index.html">&times;</a>
           <div class="content">
             Thank to pop me out of that button, but now i'm done so you can close this window.
           </div>
