--- a/templates/index.html
+++ b/templates/index.html
@@ -24,13 +24,12 @@
     <section id="welcome">
       <h2>Bienvenue sur l'arbre Généalogique de Haché et Leduc!</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ut velit quis velit vestibulum placerat ut vitae quam. Pellentesque in augue at lorem ultricies ullamcorper eu vitae enim.</p>
-      <a class="button" href="#popup1">Let me Pop up</a>
+      <a class="button" href="#popup1">Tristan</a>
       <div id="popup1" class="overlay">
         <div class="popup">
-          <h2>Here i am</h2>
-          <a class="close" href="index.html">&times;</a>
+          <a class="close" href="/">&times;</a>
           <div class="content">
-            Thank to pop me out of that button, but now i'm done so you can close this window.
+            <img src="https://o.remove.bg/downloads/9bc7a6f5-0890-4e42-ab25-05f797292c5f/image-removebg-preview.png" alt="trust">
           </div>
         </div>
       </div>
