--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="https://github.com/tristanhache/family-tree-img/blob/main/family-men.png">
+    <link rel="shortcut icon" href="https://github.com/tristanhache/family-tree-img/blob/main/family-men.png" type="image/png"> 
     <title>Family Tree - Haché & Leduc</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
     <script src="https://kit.fontawesome.com/feeefe9188.js" crossorigin="anonymous"></script>
