--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
   <header>
     <nav>
       <ul>
-        <li><a href="#">Accueil</a></li>
+        <li><a href="/">Accueil</a></li>
         <li><a href="#">Story</a></li>
         <li><a href="#">Galerie</a></li>
       </ul>
