--- a/templates/index.html
+++ b/templates/index.html
@@ -15,8 +15,8 @@
     <nav>
       <ul>
         <li><a href="/">Accueil</a></li>
-        <li><a href="#">Story</a></li>
-        <li><a href="#">Galerie</a></li>
+        <li><a href="story.html">Histoire</a></li>
+        <li><a href="galerie.html">Galerie</a></li>
       </ul>
     </nav>
   </header>
@@ -24,14 +24,6 @@
     <section id="welcome">
       <h2>Bienvenue sur l'arbre Généalogique de Haché et Leduc!</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ut velit quis velit vestibulum placerat ut vitae quam. Pellentesque in augue at lorem ultricies ullamcorper eu vitae enim.</p>
-      <a class="button" href="#popup1">Tristan</a>
-      <div id="popup1" class="overlay">
-        <div class="popup">
-          <a class="close" href="/">&times;</a>
-          <div class="content">
-          </div>
-        </div>
-      </div>
     </section>
     <section id="gallery">
       <h2>Galerie Photo!</h2>
