--- a/templates/story.html
+++ b/templates/story.html
@@ -15,8 +15,8 @@
         <nav>
             <ul>
                 <li><a href="/">Accueil</a></li>
-                <li><a class="active" href="story.html">Histoire</a></li>
-                <li><a href="galerie.html">Galerie</a></li>
+                <li><a class="active" href="/story">Histoire</a></li>
+                <li><a href="/galerie">Galerie</a></li>
             </ul>
         </nav>
     </header>
