--- a/templates/story.html
+++ b/templates/story.html
@@ -19,4 +19,19 @@
                 <li><a href="/galerie">Galerie</a></li>
             </ul>
         </nav>
+        <h1>Notre Histoire</h1>
     </header>
+    
+    <main>
+        <section class="story">
+            <h2>Comment tout a commencé</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis odio a dolor fringilla, sit amet euismod risus consequat. Vivamus eleifend felis nec nibh malesuada, ut convallis enim imperdiet. Nam lobortis velit nunc, a malesuada sem laoreet at. Duis id risus ac ipsum lobortis lobortis nec quis quam. Ut aliquet auctor mauris, eu efficitur arcu malesuada in. Praesent a ipsum nec quam venenatis sodales. Integer mollis congue sapien, id imperdiet tortor volutpat non. In a justo odio. Fusce mattis odio augue, a commodo elit rutrum et.</p>
+            <p>Suspendisse vel velit euismod, bibendum mauris at, elementum velit. Sed tincidunt sollicitudin libero, at malesuada tortor cursus quis. Ut vitae congue enim. Pellentesque vel nisl vel ipsum laoreet gravida. Suspendisse vitae augue molestie, viverra elit eu, semper ipsum. Praesent quis bibendum lacus. Curabitur dignissim semper sapien. Sed non lobortis eros. Pellentesque interdum tincidunt est eu ultrices. Donec bibendum nunc vitae risus molestie, a pellentesque libero aliquet. Aliquam mattis ante eu velit eleifend, id viverra tellus tempor.</p>
+        </section>
+    </main>
+    
+    <footer>
+        <p>&copy; 2023 My Family Tree</p>
+    </footer>
+</body>
+</html>
