--- a/templates/story.html
+++ b/templates/story.html
@@ -29,9 +29,8 @@
             <p>Suspendisse vel velit euismod, bibendum mauris at, elementum velit. Sed tincidunt sollicitudin libero, at malesuada tortor cursus quis. Ut vitae congue enim. Pellentesque vel nisl vel ipsum laoreet gravida. Suspendisse vitae augue molestie, viverra elit eu, semper ipsum. Praesent quis bibendum lacus. Curabitur dignissim semper sapien. Sed non lobortis eros. Pellentesque interdum tincidunt est eu ultrices. Donec bibendum nunc vitae risus molestie, a pellentesque libero aliquet. Aliquam mattis ante eu velit eleifend, id viverra tellus tempor.</p>
         </section>
     </main>
-    
     <footer>
-        <p>&copy; 2023 My Family Tree</p>
-    </footer>
-</body>
-</html>
+        <p>&copy; 2023 Tristan Industries - All rights reserved.</p>
+      </footer>
+    </body>
+    </html>
