--- a/static/css/main.css
+++ b/static/css/main.css
@@ -86,6 +86,12 @@ nav {
   color: #333;
   border-radius: 10px;
   }
+
+  .active {
+    background-color: #fff;
+    color: #333;
+    border-radius: 10px;
+  }
   
   /* Gallery Styles */
   .photo-gallery {
